fixes stripe-row/sidenav overlap, centers striped row/panels below on funding projects, events home pages

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -86,6 +86,8 @@ a {
 .sidenav {
   height: 100%;
   background: none;
+  margin-right: 1%;
+  margin-left: 3%;
 }
   
 .stripe_row {
@@ -98,6 +100,30 @@ a {
   color: rgb(4, 4, 58);
 }
 
+.stripe_row_feature_home {
+  background-color: #d4d4d4;
+  padding-bottom: 0%;
+  padding-right: 0;
+  padding-left: 0;
+  padding-top: .5%;
+  /* box-sizing: border-box;
+  display: block; */
+  display: flex;
+  justify-content: center;
+  
+  width: 71%;
+  right: -3%;
+  position: relative;
+  margin-left: 0;
+  margin-right: 0;
+  /* padding: 1%, 0, 1%, 2%; */
+  margin-top: 3%;
+  margin-bottom: 2.5%;
+  font-size: 26px;
+  color: rgb(4, 4, 58);
+  border: none;
+ }
+ 
 footer, #footer {
   background: none;
   padding: 2%;
